Simplify subtitle generation API
