# app/backend/routes/api.php
@@ -1,7 +1,6 @@
 <?php
 
 use App\Http\Controllers\Api\SubtitleJobController;
-use App\Http\Controllers\Api\SubtitleTrackController;
 use App\Http\Middleware\RequireExtensionInstallId;
 use Illuminate\Support\Facades\Route;
 
@@ -10,15 +9,4 @@ Route::prefix('v1')
     ->group(function (): void {
         Route::post('/subtitle-jobs', [SubtitleJobController::class, 'store'])
             ->name('subtitle-jobs.store');
-
-        Route::get('/subtitle-jobs/{subtitleJob}', [SubtitleJobController::class, 'show'])
-            ->whereUuid('subtitleJob')
-            ->name('subtitle-jobs.show');
-
-        Route::get('/tracks/lookup', [SubtitleTrackController::class, 'lookup'])
-            ->name('tracks.lookup');
-
-        Route::get('/tracks/{subtitleTrack}', [SubtitleTrackController::class, 'show'])
-            ->whereUuid('subtitleTrack')
-            ->name('tracks.show');
     });
